update swager
